# TOHUTOU

./: .gitignore  Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 26d3166e914a_add_notifications_conversations_messages.py  3f7b333c550e_add_org_slug_branding.py  5e9f08a1f3a7_expand_announcement_price_quantity_precision.py  debc6f7c3278_initial_tables.py
backend/app/core/: dependencies.py  security.py
backend/app/models/: __init__.py  announcement.py  conversation.py  cooperative.py  membership_request.py  message.py  notification.py  organization.py  user.py
backend/app/routers/: announcements.py  auth.py  conversations.py  cooperatives.py  membership_requests.py  notifications.py  organizations.py  stats.py  upload.py  users.py
backend/app/schemas/: announcement.py  conversation.py  cooperative.py  membership_request.py  notification.py  organization.py  user.py
backend/app/scripts/: __init__.py  anonymize_demo_entities.py  seed_demo_announcements.py
backend/app/services/: auth.py  notifications.py  storage.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: index.ts
frontend/src/lib/: api.ts  auth-context.tsx  chat-context.tsx  images.ts  notification-context.tsx  org-context.tsx
scripts/: test-api.sh
(+53 files in other folders)
